--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,3 +14,5 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
+URL: https://github.com/tjpalanca/tailwind.R
+BugReports: https://github.com/tjpalanca/tailwind.R/issues
