--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,3 +16,15 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 URL: https://github.com/tjpalanca/tailwind.R
 BugReports: https://github.com/tjpalanca/tailwind.R/issues
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
+Imports: 
+    processx,
+    fs,
+    glue,
+    purrr,
+    readr,
+    whisker,
+    rlang,
+    checkmate
