--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,7 @@ RoxygenNote: 7.1.2
 URL: https://github.com/tjpalanca/tailwind.R
 BugReports: https://github.com/tjpalanca/tailwind.R/issues
 Suggests: 
+    covr,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Imports: 
