Address R CMD check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(npm_run)
 export(npx_run)
 export(tailwind_assets)
 export(tailwind_build)
+export(tailwind_demo)
 export(tailwind_init)
 export(tailwind_install)
 export(tailwind_installed)
@@ -29,6 +30,7 @@ importFrom(fs,dir_delete)
 importFrom(fs,dir_exists)
 importFrom(fs,dir_info)
 importFrom(fs,file_copy)
+importFrom(fs,file_exists)
 importFrom(fs,file_info)
 importFrom(fs,path)
 importFrom(fs,path_abs)
@@ -36,6 +38,7 @@ importFrom(fs,path_dir)
 importFrom(fs,path_file)
 importFrom(fs,path_package)
 importFrom(fs,path_rel)
+importFrom(fs,path_temp)
 importFrom(glue,glue)
 importFrom(here,here)
 importFrom(htmltools,HTML)
