--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,4 +34,6 @@ Imports:
     snakecase,
     here,
     htmltools,
-    webtools
+    webtools (>= 0.9.0.9000)
+Remotes:  
+    tjpalanca/webtools
