--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,19 @@
 Package: tailwind.R
 Title: Tailwind CSS for R
 Version: 0.1.0
-Authors@R: 
+Authors@R: c(
     person(given = "Troy James",
            family = "Palanca",
            role = c("aut", "cre"),
            email = "mail@tjpalanca.com",
-           comment = c(ORCID = "0000-0002-0610-9213"))
+           comment = c(ORCID = "0000-0002-0610-9213")),
+    person("Adam Wathan", email = "adam.wathan@gmail.com",
+           role = c("aut", "cre"),
+           comment = "Tailwind CSS (MIT License)"),
+    person("Jonathan Reinink", email = "jonathan@reinink.ca",
+           role = c("aut", "cre"),
+           comment = "Tailwind CSS (MIT License)")
+    )
 Description: Tailwind CSS is a utility-first CSS framework that can be used
     to build any kind of design directly in the markup. This package allows
     R users to build Tailwind CSS pages.
